--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -116,13 +116,13 @@ ENDIF(CUDA_FOUND)
 #ENDIF(FREEIMAGE_FOUND)
 
 # JPEG
-#INCLUDE(FindJPEG)
-#IF(JPEG_FOUND)
-#	SET(HAVE_JPEG ${JPEG_FOUND} CACHE BOOL "Set to TRUE if JPEG is found, FALSE otherwise")
-#	MESSAGE(STATUS "Looking for JPEG - found")
-#ELSE(JPEG_FOUND)
-#	MESSAGE(STATUS "Looking for JPEG - not found")
-#ENDIF(JPEG_FOUND)
+INCLUDE(FindJPEG)
+IF(JPEG_FOUND)
+	SET(HAVE_JPEG ${JPEG_FOUND} CACHE BOOL "Set to TRUE if JPEG is found, FALSE otherwise")
+	MESSAGE(STATUS "Looking for JPEG - found")
+ELSE(JPEG_FOUND)
+	MESSAGE(STATUS "Looking for JPEG - not found")
+ENDIF(JPEG_FOUND)
 
 # PNG
 INCLUDE(FindPNG)
