--- a/src/DX9SDKSampleFramework/CMakeLists.txt
+++ b/src/DX9SDKSampleFramework/CMakeLists.txt
@@ -29,7 +29,7 @@ ENDIF(NV_DX9SDKSampleFramework_SHARED)
 target_include_directories( DX9SDKSampleFramework PRIVATE   ${CMAKE_CURRENT_SOURCE_DIR}/../3rth/ ${DX10_INCLUDE_PATH} )
 
 
-TARGET_LINK_LIBRARIES(DX9SDKSampleFramework  ${LIBS} ${D3D9_LIBRARY}  ${D3Dx9_LIBRARY} ${D3DXGUID_LIBRARY})
+TARGET_LINK_LIBRARIES(DX9SDKSampleFramework  ${LIBS} ${D3D9_LIBRARY} ${D3DX9_LIBRARY} ${D3DXGUID_LIBRARY})
 
 INSTALL(TARGETS DX9SDKSampleFramework
 	RUNTIME DESTINATION bin
