--- a/src/NV_D3DMesh/CMakeLists.txt
+++ b/src/NV_D3DMesh/CMakeLists.txt
@@ -22,7 +22,7 @@ ENDIF(NV_D3D_MESH_SHARED)
 
 target_include_directories( nv_d3dmesh PRIVATE   ${CMAKE_CURRENT_SOURCE_DIR}/../3rth/ ${DX10_INCLUDE_PATH} ../examples/ ${DX10_INCLUDE_PATH} ../extern/)
 
-TARGET_LINK_LIBRARIES(nv_d3dmesh ${LIBS} ${D3D9_LIBRARY} ${D3Dx9_LIBRARY} ${D3D10_LIBRARY} ${D3Dx10_LIBRARY})
+TARGET_LINK_LIBRARIES(nv_d3dmesh ${LIBS} ${D3D9_LIBRARY} ${D3DX9_LIBRARY} ${D3D10_LIBRARY} ${D3Dx10_LIBRARY})
 
 INSTALL(TARGETS nv_d3dmesh
 	RUNTIME DESTINATION bin
