--- a/src/hdr/CMakeLists.txt
+++ b/src/hdr/CMakeLists.txt
@@ -16,9 +16,9 @@ ELSE(NVHDR_SHARED)
     ADD_LIBRARY(nvHdr ${HDR_SRCS})
 ENDIF(NVHDR_SHARED)
 
-target_include_directories(nvHdr PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../3rth/    ${CMAKE_CURRENT_SOURCE_DIR}/../examples )
+target_include_directories(nvHdr PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../3rth/    ${CMAKE_CURRENT_SOURCE_DIR}/../examples ${GLUT_INCLUDE_DIR})
 
-TARGET_LINK_LIBRARIES(nvHdr opengl32 ${GLUT_glut_LIBRARY} )
+TARGET_LINK_LIBRARIES(nvHdr opengl32 ${GLUT_glut_LIBRARY_RELEASE} )
 
 INSTALL(TARGETS nvHdr
     RUNTIME DESTINATION bin
