--- a/src/DXUT/CMakeLists.txt
+++ b/src/DXUT/CMakeLists.txt
@@ -23,7 +23,7 @@ IF(VS_2015)
 	ADD_DEFINITIONS(-DDIRECTX_SDK_FROM_WINDOW=1)
 ELSE(VS_2015)
 	INCLUDE_DIRECTORIES(${DX10_INCLUDE_PATH})
-	LINK_DIRECTORIES(${DX10_INCLUDE_PATH}/../Lib/x86)
+	LINK_DIRECTORIES(${DX10_INCLUDE_PATH}/../Lib/x64)
 ENDIF(VS_2015)
 
 # targets
@@ -37,7 +37,7 @@ ELSE(NV_DXUT_SHARED)
     ADD_LIBRARY(nv_dxut ${NV_DXUT_SRCS})
 ENDIF(NV_DXUT_SHARED)
 
-TARGET_LINK_LIBRARIES(nv_dxut ${LIBS}  )
+TARGET_LINK_LIBRARIES(nv_dxut ${LIBS} legacy_stdio_definitions )
 
 
 INSTALL(TARGETS nv_dxut
