--- a/src/NV_D3DCommon/CMakeLists.txt
+++ b/src/NV_D3DCommon/CMakeLists.txt
@@ -20,7 +20,7 @@ ENDIF(NV_D3D_COMMON_SHARED)
 
 target_include_directories( nv_d3dcommon PRIVATE   ${CMAKE_CURRENT_SOURCE_DIR}/../3rth/ ${DX10_INCLUDE_PATH} ../nv_d3dmesh ../examples/ ${DX10_INCLUDE_PATH} ../extern/ )
 
-TARGET_LINK_LIBRARIES(nv_d3dcommon ${LIBS} nv_d3dmesh ${D3D9_LIBRARY}  ${D3Dx9_LIBRARY} ${D3D10_LIBRARY} ${D3Dx10_LIBRARY})
+TARGET_LINK_LIBRARIES(nv_d3dcommon ${LIBS} nv_d3dmesh ${D3D9_LIBRARY}  ${D3DX9_LIBRARY} ${D3D10_LIBRARY} ${D3Dx10_LIBRARY})
 
 INSTALL(TARGETS nv_d3dcommon
 	RUNTIME DESTINATION bin
